[tool.poetry]
name = "cipher_lf2719"
version = "0.1.0"
description = "A cipher function that encrypts user's input by shifting the letters of the alphabet."
authors = ["Ludmila Filipova"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
